# Intercooperative-Network-old

./: Cargo.toml  README.md  all_code_files_content.txt  all_files_content.txt  cat_files_to_text.sh
.github/workflows/: ci.yml
src/: blockchain.rs  cli.rs  consensus.rs  content_store.rs  coop_vm.rs  cscl_compiler.rs  currency.rs  democracy.rs  did.rs  error.rs  fib.rs  icn_node_tests.rs  lib.rs  main.rs  network.rs  pending_interest_table.rs  smart_contract.rs  tests.rs  transaction_validator.rs
src/api/: mod.rs
src/blockchain/: block.rs  blockchain.rs  mod.rs  transaction.rs
src/cli/: command_line.rs
src/consensus/: consensus.rs  mod.rs  poc_consensus.rs
src/currency/: currency.rs  mod.rs
src/governance/: democracy.rs  mod.rs
src/identity/: did.rs  mod.rs
src/logging/: logger.rs  mod.rs
src/network/: mod.rs  network.rs  packet.rs
src/node/: content_store.rs  icn_node.rs  mod.rs  pending_interest_table.rs
src/sharding/: cross_shard_communication.rs  cross_shard_transaction_manager.rs  mod.rs
src/smart_contract/: mod.rs  smart_contract.rs
src/tests/: mod.rs
src/vm/: compiler.rs  coop_vm.rs  cscl_compiler.rs  mod.rs  opcode.rs  vm.rs
