[package]
name = "icn_node"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1.38.0", features = ["full"] }
humantime-serde = "1.1.1"

[dev-dependencies]
tokio-test = "0.4.4"